compiler/typ/tests/fixtures/diagnostics/0186_adt_constructor_bool_arg_mismatch_06.ml.infer.expected
File "0186_adt_constructor_bool_arg_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0186_adt_constructor_bool_arg_mismatch_06 is not a valid module name.

File "0186_adt_constructor_bool_arg_mismatch_06.ml", line 2, characters 13-14:
2 | let _ = High 5
                 ^
Error: The constant 5 has type int but an expression was expected of type
         bool
